--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.13",
-    "next": "14.1.3",
+    "js-cookie": "^3.0.5",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
