--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.13",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "file-loader": "^6.2.0",
     "js-cookie": "^3.0.5",
     "next": "^14.1.4",
+    "node-loader": "^2.0.0",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18",
     "react-dom": "^18"
   },
